# errors-to-salck

./: Cargo.toml  error-to-slack.service
src/: main.rs
