[package]
name = "errors-to-salck"
version = "0.1.0"
authors = ["awallef <antoine.wallef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "4.0.0"
regex = "1"
rev_lines = "0.2.1"
tokio = "0.2.22"
slack-hook2 = "0.10.0"
